Fixed some bugs Fixed mod images being squished Fixed collection selection menu appearing in every mod page

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,6 +48,7 @@ body {
         width: 10vh;
         border-radius: 10vh;
         pointer-events: none;
+        background-color: #222;
     }
     
     &:hover {
@@ -106,17 +107,6 @@ body {
         font-family: Open Sans Light, Arial, sans-serif;
     }
 }
-
-// .updatealertnotification {
-//     -webkit-mask-image: url(images/circle.svg);
-//     -webkit-mask-size: 100%;
-//     -webkit-mask-repeat: no-repeat;
-//     text-align: center;
-//     position: absolute;
-//     right: 20px;
-//     width: 10px;
-//     height: 10px;
-// }
 
 #box-of-buttons {
     width: 100%;
@@ -241,6 +231,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 #mod-info {
@@ -300,7 +291,6 @@ body {
 #title-image {
     width: 100% !important;
     pointer-events: none;
-    max-height: 20vh;
 }
 
 #title-header {
@@ -357,6 +347,7 @@ body {
     left: 0px;
     bottom: 0px;
     background: linear-gradient(to top, $black-2 25%, transparent 75%);
+    pointer-events: none;
 }
 
 #install-play-button {
@@ -365,13 +356,13 @@ body {
     bottom: 0;
     margin: 3vh;
     padding: 2vh;
-    font-size: 7vh;
+    font-size: 6.5vh;
     letter-spacing: 0.35vh;
     text-transform: uppercase;
     font-family: Roboto Medium, Arial, sans-serif;
     display: block;
     border: none;
-    text-shadow: 0px 0px 3.5vh $black;
+    text-shadow: 0px 0px 5vh $black;
     z-index: 1;
 
     &:hover {
@@ -402,19 +393,25 @@ body {
 }
 
 #collection-versions {
-    width: 500;
-    position: absolute;
-    right: 27%;
-    bottom: 15%;
-    margin: 3vh;
-    padding: 2vh;
+    width: 200px;
+    margin: 2vh;
+    padding: 1vh;
     font-size: 3vh;
     background-color: $dark-orange;
     text-transform: uppercase;
-    font-family: Roboto Medium, Arial, sans-serif;
-    display: none;
-    border: none;
+    font-family: 'Roboto Regular', Arial, sans-serif;
+    color: #EEE;
+    border-radius: 0.5vh;
+    border: 0;
+    outline: 0;
     z-index: 1;
+    pointer-events: all;
+    transition: 0.2s;
+
+    &:hover {
+        background-color: #B75C22;
+        cursor: pointer;
+    }
 }
 
 .hidden {
